--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       context: .
       dockerfile: ./docker/Dockerfile
     env_file:
-      - ./.env
+      - ./.env.docker
     depends_on:
       - postgres
     volumes:
